# voltadomar

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  diagrams.drawio  icmp_time.pcapng  plan.md  pyproject.toml  requirements.txt
cli/: README.md  go.mod
cli/cmd/voltadomar-cli/: main.go
cli/proto/anycast/: anycast.pb.go  anycast_grpc.pb.go
docs/: api.md  testing.md
examples/: agent.py  agent.sh  client.py  controller.py  controller.sh
examples/config/: agent.yaml  controller.yaml
examples/install/: linux-install.sh
examples/logrotate/: voltadomar
examples/systemd/: voltadomar-agent.service  voltadomar-controller.service
experiments/: icmp_experiment.py  icmp_test.py  udp_test.py
integration-tests/: README.md  smoke_test.py  test_failure_detection.py
ref/: traceroute.h
src/: agent.py  anycast.proto  anycast_pb2.py  anycast_pb2_grpc.py  client.py  command.proto  command_pb2.py  command_pb2_grpc.py  constants.py  controller.py  exceptions.py  packets.py  server.py  sockets.py  test.py  traceroute.py  utils.py  worker.py  worker_group.py  worker_manager.py
src/agent/: agent.py  worker.py  worker_manager.py
src/anycast/: anycast.proto
src/client/: client.py
src/controller/: __init__.py  controller.py  models.py  program.py  traceroute.py
src/controller/traceroute/: __init__.py  models.py  traceroute.py  utils.py
src/voltadomar/: __init__.py  constants.py  exceptions.py  go.mod  go.sum  packets.py  requirements.txt  setup.py  utils.py
src/voltadomar/agent/: __init__.py  agent.py  worker.py
test/: udp_test.py
(+28 files in other folders)
